# smart-travel-planner

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agent/: graph.py  state.py
backend/app/api/: agent.py  auth.py  deps.py  tools.py  trips.py
backend/app/core/: config.py  security.py
backend/app/db/: models.py  session.py
backend/app/prompts/: agent_prompts.py
backend/app/schemas/: ml.py  user.py  weather.py
backend/app/services/: classifier_service.py  data_utils.py  embedder.py  rag_service.py  user_service.py  weather_service.py
backend/app/tools/: travel_tools.py
backend/scripts/: dataset_merger.py  fetch_wikivoyage.py  ingest_rag.py  init_db.py  label_engineering.py  test_ml.py  test_rag.py  test_weather.py  train_model.py
data/cleaned/: clean_cost_df.csv  clean_weather_df.csv  smart_travel_dataset_augmented.csv  smart_travel_dataset_cleaned.csv  target_destinations.csv
data/ml/: results.csv  travel_style_classifier.joblib
data/raw/: smart_travel_dataset.csv  travel_guides.json
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Auth.jsx  Chat.jsx
notebook/: pyproject.toml
notebook/cleaning/: label_engineering.ipynb
notebook/merger/: dataset_merger.ipynb
notebook/ml/: train_model.ipynb
presentation/: presentation.html
